--- a/Day1/Lesson 3/buttons.html
+++ b/Day1/Lesson 3/buttons.html
@@ -1,5 +1,5 @@
 <button class="sub-button">SUBSCRIBE</button>
-<button class="join-button">JOIN</button>
+<button class="join-button"></button>JOIN</button>
 <button class="tweet-button">Tweet</button>
 <style>
   .sub-button{
